--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@graphql-tools/load-files": "^6.5.3",
+    "@graphql-tools/merge": "^8.2.3",
     "apollo-server": "^3.6.3",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "graphql-tools": "^8.2.0",
+    "knex": "^1.0.3",
+    "pg": "^8.7.3"
   }
 }
