--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "@styled-icons/evaicons-outline": "^10.34.0",
     "leaflet": "^1.7.1",
     "next": "12.1.0",
     "react": "17.0.2",
